--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>com.github.ukgovld</groupId>
 			<artifactId>registry-core</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.3.0</version>
 			<classifier>classes</classifier>
 			<scope>provided</scope>
 		</dependency>
