--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 		<pulsar.version>2.7.0</pulsar.version>
 	</properties>
 
+	<scm>
+		<developerConnection>scm:git:git@github.com:UKGovLD/registry-pulsar-plugin.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.pulsar</groupId>
@@ -47,6 +52,11 @@
 				<artifactId>wagon-ftp</artifactId>
 				<version>2.12</version>
 			</extension>
+			<extension>
+				<groupId>org.springframework.build</groupId>
+				<artifactId>aws-maven</artifactId>
+				<version>5.0.0.RELEASE</version>
+			</extension>
 		</extensions>
 	</build>
 
@@ -74,4 +84,17 @@
 			</snapshots>
 		</repository>
 	</repositories>
+
+	<distributionManagement>
+		<repository>
+			<id>ukgovld-s3-release</id>
+			<name>UKGovLD release repository</name>
+			<url>s3://ukgovld/release</url>
+		</repository>
+		<snapshotRepository>
+			<id>ukgovld-s3-snapshot</id>
+			<name>UKGovLD snapshot repository</name>
+			<url>s3://ukgovld/snapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
