--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
+							<outputDirectory>target/lib</outputDirectory>
 							<excludeScope>provided</excludeScope>
 						</configuration>
 					</execution>
